fix "We Represent" hed spacing in Ektron

--- a/proto/css/src/_hack.ektron.less
+++ b/proto/css/src/_hack.ektron.less
@@ -60,6 +60,7 @@ main footer { background-color: transparent; }
 // HACK: fix icon sizing due to Bootstrap root rem values.
 .c-SolidCircleIcon {
   transform: scale(16 / 10);
+  // HACK adjust surrounding elements’ spacing due to increased icon size
   &.c-Stat__Icon + p {
     padding-top: 1.5rem;
     padding-top: var(--lh);
@@ -86,6 +87,15 @@ main footer { background-color: transparent; }
 .c-Button[href] {
   text-decoration: none; // override bootstrap text-decoration
   &:visited { color: @g-color-btn-txt; }
+}
+
+
+// HACK adjust surrounding elements’ spacing due to increased icon size
+.c-Tagline + h1 {
+  margin-bottom: 4.5rem;
+  margin-bottom: calc(3 ~'*' var(--lh));
+  margin-block-end: calc(3 ~'*' var(--lh));
+  margin-block-end: 3lh;
 }
 
 
